<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/ic_book"
        android:title="@string/title_books" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_news"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_creation"
        android:icon="@drawable/ic_create"
        android:title="@string/title_creation" />
    <item
        android:id="@+id/navigation_plans"
        android:icon="@drawable/ic_plan"
        android:title="@string/title_plans" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profil"
        android:title="@string/title_profile" />

</menu>