<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_books">

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.northbook.ui.menu.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books">
        <action
            android:id="@+id/action_booksFragment_to_listBookFragment"
            app:destination="@id/listBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/listBookFragment"
        android:name="com.example.northbook.ui.category.BookListFragment"
        android:label="@string/title_genre"
        tools:layout="@layout/fragment_book_list" />

    <fragment
        android:id="@+id/navigation_plans"
        android:name="com.example.northbook.ui.menu.PlansFragment"
        android:label="@string/title_plans"
        tools:layout="@layout/fragment_plans">
        <action
            android:id="@+id/action_plansFragment_to_goalFragment"
            app:destination="@id/navigation_goal" />
    </fragment>

    <fragment
        android:id="@+id/navigation_goal"
        android:name="com.example.northbook.ui.menu.GoalFragment"
        android:label="@string/title_goal"
        tools:layout="@layout/fragment_goal" />

    <fragment
        android:id="@+id/navigation_creation"
        android:name="com.example.northbook.ui.menu.CreationFragment"
        android:label="@string/title_creation"
        tools:layout="@layout/fragment_creation" >
        <action
            android:id="@+id/action_navigation_creation_to_newBookFragment"
            app:destination="@id/newBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.northbook.ui.menu.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.northbook.ui.menu.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/newBookFragment"
        android:name="com.example.northbook.ui.creat.NewBookFragment"
        android:label="fragment_new_book"
        tools:layout="@layout/fragment_new_book" />

</navigation>